Endpoints para registro e login de usuário

--- a/src/services/NSE.Identity.API/NSE.Identity.API.csproj
+++ b/src/services/NSE.Identity.API/NSE.Identity.API.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>d07d2e69-5f21-453e-a444-b6fe8b36fde3</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
@@ -27,7 +27,6 @@
   <ItemGroup>
     <Folder Include="Configurations\" />
     <Folder Include="Extensions\" />
-    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
