Obtendo o base url pelo appsettings

--- a/src/web/NSE.WebApp.MVC/appsettings.Development.json
+++ b/src/web/NSE.WebApp.MVC/appsettings.Development.json
@@ -1,4 +1,6 @@
 {
+  "AuthenticationUrl": "https://localhost:44350",
+  "CatalogUrl": "https://localhost:44350",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
