--- a/src/services/NSE.Catalog.API/NSE.Catalog.API.csproj
+++ b/src/services/NSE.Catalog.API/NSE.Catalog.API.csproj
@@ -15,6 +15,11 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Data\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\building blocks\NSE.Core\NSE.Core.csproj" />
   </ItemGroup>
 
 </Project>
