--- a/src/services/NSE.Catalog.API/NSE.Catalog.API.csproj
+++ b/src/services/NSE.Catalog.API/NSE.Catalog.API.csproj
@@ -10,12 +10,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="microsoft.EntityFrameworkCore" Version="6.0.13" />
+    <PackageReference Include="microsoft.EntityFrameworkCore.Abstractions" Version="6.0.13" />
+    <PackageReference Include="microsoft.EntityFrameworkCore.Design" Version="6.0.13">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="microsoft.EntityFrameworkCore.Relational" Version="6.0.13" />
+    <PackageReference Include="microsoft.EntityFrameworkCore.SqlServer" Version="6.0.13" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Data\" />
   </ItemGroup>
 
   <ItemGroup>
