--- a/src/services/NSE.Catalog.API/NSE.Catalog.API.csproj
+++ b/src/services/NSE.Catalog.API/NSE.Catalog.API.csproj
@@ -19,10 +19,7 @@
     <PackageReference Include="microsoft.EntityFrameworkCore.Relational" Version="6.0.13" />
     <PackageReference Include="microsoft.EntityFrameworkCore.SqlServer" Version="6.0.13" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
