--- a/src/web/NSE.WebApp.MVC/NSE.WebApp.MVC.csproj
+++ b/src/web/NSE.WebApp.MVC/NSE.WebApp.MVC.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="microsoft.aspnetcore.Authentication.JwtBearer" Version="6.0.13" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.4" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
   </ItemGroup>
 
