--- a/src/web/NSE.WebApp.MVC/Properties/launchSettings.json
+++ b/src/web/NSE.WebApp.MVC/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "NSE.WebApp.MVC": {
+    "SelfHosrintg": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
@@ -8,28 +8,42 @@
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7247;http://localhost:5135"
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-      "publishAllPorts": true,
-      "useSSL": true
     }
-  },
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:26693",
-      "sslPort": 44319
-    }
+    //"IIS - Development": {
+    //  "commandName": "IISExpress",
+    //  "launchBrowser": true,
+    //  "environmentVariables": {
+    //    "ASPNETCORE_ENVIRONMENT": "Development"
+    //  }
+    //},
+    //"IIS - Staging": {
+    //  "commandName": "IISExpress",
+    //  "launchBrowser": true,
+    //  "environmentVariables": {
+    //    "ASPNETCORE_ENVIRONMENT": "Staging"
+    //  }
+    //},
+    //"IIS - Production": {
+    //  "commandName": "IISExpress",
+    //  "launchBrowser": true,
+    //  "environmentVariables": {
+    //    "ASPNETCORE_ENVIRONMENT": "Production"
+    //  }
+    //},
+    //"Docker": {
+    //  "commandName": "Docker",
+    //  "launchBrowser": true,
+    //  "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+    //  "publishAllPorts": true,
+    //  "useSSL": true
+    //}
   }
+  //"iisSettings": {
+  //  "windowsAuthentication": false,
+  //  "anonymousAuthentication": true,
+  //  "iisExpress": {
+  //    "applicationUrl": "http://localhost:26693",
+  //    "sslPort": 44319
+  //  }
+  //}
 }
