--- a/src/services/NSE.Customer.API/Properties/launchSettings.json
+++ b/src/services/NSE.Customer.API/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "NSE.Client.API": {
+    "NSE.Customer.API": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7123;http://localhost:5147"
+      "applicationUrl": "https://localhost:7057;http://localhost:5156"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -31,8 +31,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:51437",
-      "sslPort": 44367
+      "applicationUrl": "http://localhost:44832",
+      "sslPort": 44352
     }
   }
 }
