--- a/src/services/NSE.Customers.API/NSE.Customers.API.csproj
+++ b/src/services/NSE.Customers.API/NSE.Customers.API.csproj
@@ -10,6 +10,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="EasyNetQ" Version="7.5.2" />
+		<PackageReference Include="EasyNetQ.Serialization.NewtonsoftJson" Version="7.5.2" />
 		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.13" />
