--- a/src/building blocks/NSE.MessageBus/NSE.MessageBus.csproj
+++ b/src/building blocks/NSE.MessageBus/NSE.MessageBus.csproj
@@ -1,19 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>disable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="EasyNetQ" Version="7.5.3" />
-    <PackageReference Include="EasyNetQ.Serialization.NewtonsoftJson" Version="7.5.3" />
-    <PackageReference Include="Polly" Version="7.2.4" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="EasyNetQ" Version="7.5.3" />
+		<PackageReference Include="EasyNetQ.Serialization.NewtonsoftJson" Version="7.5.3" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+		<PackageReference Include="Polly" Version="7.2.4" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\NSE.Core\NSE.Core.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\NSE.Core\NSE.Core.csproj" />
+	</ItemGroup>
 
 </Project>
