--- a/src/services/NSE.Customers.API/appsettings.Development.json
+++ b/src/services/NSE.Customers.API/appsettings.Development.json
@@ -9,6 +9,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=LEONARDO-PC\\SQLEXPRESS;Database=NerdStoreEnterprise;user id=sa; password=1234;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "MessageQueueConnectionString": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+  },
   "AppSettings": {
     "Secret": "MEUSEGREDOSUPERSECRETO",
     "ExpiracaoHoras": 2,
