--- a/src/services/NSE.Identity.API/appsettings.Development.json
+++ b/src/services/NSE.Identity.API/appsettings.Development.json
@@ -1,12 +1,15 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=LEONARDO-PC\\SQLEXPRESS;Database=NerdStoreEnterprise;user id=sa; password=1234;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LEONARDO-PC\\SQLEXPRESS;Database=NerdStoreEnterprise;user id=sa; password=1234;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "MessageQueueConnectionString": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
   },
   "AppSettings": {
     "Secret": "MEUSEGREDOSUPERSECRETO",
