Configuração da estrutura de dados do carrinho de compras

--- a/src/services/NSE.Cart.API/NSE.Cart.API.csproj
+++ b/src/services/NSE.Cart.API/NSE.Cart.API.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
-		<Nullable>enable</Nullable>
+		<Nullable>disable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UserSecretsId>d2590349-07e2-433a-bf74-3e7a71fa4bef</UserSecretsId>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
@@ -24,8 +24,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Data\" />
-	  <Folder Include="Model\" />
+	  <Folder Include="Migrations\" />
 	</ItemGroup>
 
 </Project>
