--- a/src/services/NSE.Cart.API/appsettings.Development.json
+++ b/src/services/NSE.Cart.API/appsettings.Development.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LEONARDO-PC\\SQLEXPRESS;Database=NerdStoreEnterprise;user id=sa; password=1234;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AppSettings": {
     "Secret": "MEUSEGREDOSUPERSECRETO",
     "ExpiracaoHoras": 2,
