--- a/src/web/NSE.WebApp.MVC/appsettings.Development.json
+++ b/src/web/NSE.WebApp.MVC/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "AuthenticationUrl": "https://localhost:44350",
   "CatalogUrl": "https://localhost:44387",
+  "CartUrl": "https://localhost:44386",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
