--- a/src/api gateways/NSE.Bff.Shopping/appsettings.Development.json
+++ b/src/api gateways/NSE.Bff.Shopping/appsettings.Development.json
@@ -2,13 +2,14 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=LEONARDO-PC\\SQLEXPRESS;Database=NerdStoreEnterprise;user id=sa; password=1234;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+  "AllowedHosts": "*",
+  "CatalogUrl": "https://localhost:44387",
+  "CartUrl": "https://localhost:44386",
+  "OrderUrl": "https://localhost:44387",
+  "PaymentUrl": "https://localhost:44326",
   "MessageQueueConnectionString": {
     "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
   },
