feat: Implementação da arquitetura base do serviço de pedidos

--- a/src/services/NSE.Orders.API/appsettings.Development.json
+++ b/src/services/NSE.Orders.API/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LEONARDO-PC\\SQLEXPRESS;Database=NerdStoreEnterprise;user id=sa; password=1234;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "AppSettings": {
+    "Secret": "MEUSEGREDOSUPERSECRETO",
+    "ExpirationHours": 2,
+    "Issuer": "MeuSistema",
+    "ValidIn": "https://localhost"
   }
 }
