--- a/src/services/NSE.Orders.API/NSE.Orders.API.csproj
+++ b/src/services/NSE.Orders.API/NSE.Orders.API.csproj
@@ -10,6 +10,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Dapper" Version="2.0.143" />
 		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.13" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.13" />
