feat: Implementação do cadastro e consulta de endereço dos pedidos do cliente

--- a/src/web/NSE.WebApp.MVC/appsettings.Development.json
+++ b/src/web/NSE.WebApp.MVC/appsettings.Development.json
@@ -2,6 +2,7 @@
   "AuthenticationUrl": "https://localhost:44350",
   "CatalogUrl": "https://localhost:44387",
   "ShoppingBffUrl": "https://localhost:44385",
+  "CustomerUrl": "https://localhost:44352",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
