chore: Implementação da comunicação com o bff para poder realizar o pedido

--- a/src/api gateways/NSE.Bff.Shopping/appsettings.Development.json
+++ b/src/api gateways/NSE.Bff.Shopping/appsettings.Development.json
@@ -10,6 +10,7 @@
   "CartUrl": "https://localhost:44386",
   "OrderUrl": "https://localhost:44388",
   "PaymentUrl": "https://localhost:44326",
+  "CustomerUrl": "https://localhost:44352",
   "MessageQueueConnectionString": {
     "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
   },
