--- a/src/services/NSE.Payment.API/appsettings.Development.json
+++ b/src/services/NSE.Payment.API/appsettings.Development.json
@@ -16,5 +16,9 @@
     "ExpirationHours": 2,
     "Issuer": "MeuSistema",
     "ValidIn": "https://localhost"
+  },
+  "PaymentConfiguration": {
+    "DefaultApiKey": "ak_ewr4dsWehiwAT",
+    "DefaultEncryptionKey": "ek_SweRsdFas4uT5"
   }
 }
