--- a/src/services/NSE.Catalog.API/NSE.Catalog.API.csproj
+++ b/src/services/NSE.Catalog.API/NSE.Catalog.API.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.143" />
     <PackageReference Include="microsoft.EntityFrameworkCore" Version="6.0.13" />
     <PackageReference Include="microsoft.EntityFrameworkCore.Abstractions" Version="6.0.13" />
     <PackageReference Include="microsoft.EntityFrameworkCore.Design" Version="6.0.13">
