--- a/src/api gateways/NSE.Bff.Shopping/appsettings.Development.json
+++ b/src/api gateways/NSE.Bff.Shopping/appsettings.Development.json
@@ -15,9 +15,6 @@
     "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
   },
   "AppSettings": {
-    "Secret": "MEUSEGREDOSUPERSECRETO",
-    "ExpirationHours": 2,
-    "Issuer": "MeuSistema",
-    "ValidIn": "https://localhost"
+    "AuthenticationJwkUrl": "https://localhost:44350/jwks"
   }
 }
