--- a/src/building blocks/NSE.WebApi.Core/NSE.WebApi.Core.csproj
+++ b/src/building blocks/NSE.WebApi.Core/NSE.WebApi.Core.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="FluentValidation" Version="11.5.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.13" />
 		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.4" />
+		<PackageReference Include="netdevpack.Security.JwtExtensions" Version="6.0.2" />
 	</ItemGroup>
 	
 	<ItemGroup>
