--- a/src/services/NSE.Payment.API/appsettings.Development.json
+++ b/src/services/NSE.Payment.API/appsettings.Development.json
@@ -12,10 +12,7 @@
     "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
   },
   "AppSettings": {
-    "Secret": "MEUSEGREDOSUPERSECRETO",
-    "ExpirationHours": 2,
-    "Issuer": "MeuSistema",
-    "ValidIn": "https://localhost"
+    "AuthenticationJwkUrl": "https://localhost:44350/jwks"
   },
   "PaymentConfiguration": {
     "DefaultApiKey": "ak_ewr4dsWehiwAT",
