--- a/src/services/NSE.Identity.API/appsettings.Development.json
+++ b/src/services/NSE.Identity.API/appsettings.Development.json
@@ -10,5 +10,8 @@
   },
   "MessageQueueConnectionString": {
     "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+  },
+  "AppTokenSettings": {
+    "RefreshTokenExpiration": 8
   }
 }
