--- a/src/api gateways/NSE.Bff.Shopping/NSE.Bff.Shopping.csproj
+++ b/src/api gateways/NSE.Bff.Shopping/NSE.Bff.Shopping.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -10,6 +10,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="google.Protobuf" Version="3.24.1" />
+		<PackageReference Include="grpc.net.ClientFactory" Version="2.56.0" />
+		<PackageReference Include="grpc.Tools" Version="2.57.0" PrivateAssets="All" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	</ItemGroup>
@@ -18,6 +21,10 @@
 		<ProjectReference Include="..\..\building blocks\NSE.Core\NSE.Core.csproj" />
 		<ProjectReference Include="..\..\building blocks\NSE.MessageBus\NSE.MessageBus.csproj" />
 		<ProjectReference Include="..\..\building blocks\NSE.WebApi.Core\NSE.WebApi.Core.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Protobuf Include="..\..\services\NSE.Cart.API\Protos\cart.proto" GrpcServices="Client"></Protobuf>
 	</ItemGroup>
 
 </Project>
