feat: Inclusão da API de catálogo no arquivo yaml

--- a/src/web/NSE.WebApp.MVC/appsettings.Production.json
+++ b/src/web/NSE.WebApp.MVC/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "AuthenticationUrl": "https://localhost:7241",
-  "CatalogUrl": "https://localhost:7012",
+  "CatalogUrl": "http://nerdstore-api-catalog:7012",
   "ShoppingBffUrl": "https://localhost:7213",
   "CustomerUrl": "https://localhost:7057",
   "Logging": {
