--- a/src/services/NSE.Catalog.API/appsettings.Production.json
+++ b/src/services/NSE.Catalog.API/appsettings.Production.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LEONARDO-PC\\SQLEXPRESS;Database=NerdStoreEnterprise;user id=sa; password=1234;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=sql-server;Database=NerdStoreEnterprise;MultipleActiveResultSets=true;User Id=sa;Password=MeuDB@123"
   },
   "MessageQueueConnectionString": {
     "MessageBus": "host=rabbit-nerdstore:5672;publisherConfirms=true;timeout=30;username=nerdstore;password=nerdstore"
