--- a/src/api gateways/NSE.Bff.Shopping/appsettings.Production.json
+++ b/src/api gateways/NSE.Bff.Shopping/appsettings.Production.json
@@ -5,9 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=sql-server;Database=NerdStoreEnterprise;MultipleActiveResultSets=true;User Id=sa;Password=MeuDB@123"
-  },
+  "AllowedHosts": "*",
+  "CatalogUrl": "http://nerdstore-api-customer:7057",
+  "CartUrl": "http://nerdstore-api-cart:7136",
+  "OrderUrl": "http://nerdstore-api-order:7283",
+  "PaymentUrl": "http://nerdstore-api-payment:7100",
+  "CustomerUrl": "https://nerdstore-api-customer:7057",
   "MessageQueueConnectionString": {
     "MessageBus": "host=rabbit-nerdstore:5672;publisherConfirms=true;timeout=30;username=nerdstore;password=nerdstore"
   },
