--- a/src/services/NSE.Identity.API/appsettings.Production.json
+++ b/src/services/NSE.Identity.API/appsettings.Production.json
@@ -11,7 +11,7 @@
   "MessageQueueConnectionString": {
     "MessageBus": "host=rabbit-nerdstore:5672;publisherConfirms=true;timeout=30;username=nerdstore;password=nerdstore"
   },
-  "AppSettings": {
-    "AuthenticationJwkUrl": "http://nerdstore-api-identity:7241/jwks"
+  "AppTokenSettings": {
+    "RefreshTokenExpiration": 8
   }
 }
