--- a/src/services/NSE.Payment.API/appsettings.Production.json
+++ b/src/services/NSE.Payment.API/appsettings.Production.json
@@ -13,5 +13,9 @@
   },
   "AppSettings": {
     "AuthenticationJwkUrl": "http://nerdstore-api-identity:7241/jwks"
+  },
+  "PaymentConfiguration": {
+    "DefaultApiKey": "ak_ewr4dsWehiwAT",
+    "DefaultEncryptionKey": "ek_SweRsdFas4uT5"
   }
 }
