--- a/src/api gateways/NSE.Bff.Shopping/NSE.Bff.Shopping.csproj
+++ b/src/api gateways/NSE.Bff.Shopping/NSE.Bff.Shopping.csproj
@@ -27,4 +27,12 @@
 		<Protobuf Include="..\..\services\NSE.Cart.API\Protos\cart.proto" GrpcServices="Client"></Protobuf>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Content Update="appsettings.Production.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+	  </Content>
+	</ItemGroup>
+
 </Project>
