--- a/src/services/NSE.Cart.API/NSE.Cart.API.csproj
+++ b/src/services/NSE.Cart.API/NSE.Cart.API.csproj
@@ -33,4 +33,12 @@
 		<Protobuf Include="Protos/cart.proto" GrpcServices="Server" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Content Update="appsettings.Production.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+	  </Content>
+	</ItemGroup>
+
 </Project>
