--- a/src/services/NSE.Orders.API/NSE.Orders.API.csproj
+++ b/src/services/NSE.Orders.API/NSE.Orders.API.csproj
@@ -29,4 +29,12 @@
 		<ProjectReference Include="..\NSE.Orders.Infra\NSE.Orders.Infra.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Content Update="appsettings.Production.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+	  </Content>
+	</ItemGroup>
+
 </Project>
