--- a/src/web/NSE.WebApp.MVC/appsettings.Production.json
+++ b/src/web/NSE.WebApp.MVC/appsettings.Production.json
@@ -1,8 +1,8 @@
 {
-  "AuthenticationUrl": "https://localhost:7241",
+  "AuthenticationUrl": "http://nerdstore-api-identity:7241",
   "CatalogUrl": "http://nerdstore-api-catalog:7012",
-  "ShoppingBffUrl": "https://localhost:7213",
-  "CustomerUrl": "https://localhost:7057",
+  "ShoppingBffUrl": "http://nerdstore-api-bff-shopping:7213",
+  "CustomerUrl": "http://nerdstore-api-customer:7057",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
