feat: Implementando o proxy reverso utilizando o nginx

--- a/docker/nerdstore_production.yml
+++ b/docker/nerdstore_production.yml
@@ -139,3 +139,15 @@ services:
       - api-cart
       - api-payment
       - api-order
+
+  nerdstore-server:
+    image: desenvolvedorio/nerdstore-server:latest
+    container_name: nerdstore-server
+    build:
+      context: ./
+      dockerfile: ./nginx/Dockerfile
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - web-mvc
