feat: Utilização de uma conexão segura utilizando certificado SSL entre os serviços internos

--- a/docker/nerdstore_production.yml
+++ b/docker/nerdstore_production.yml
@@ -24,6 +24,7 @@ services:
     build:
       context: ../src
       dockerfile: ./web/NSE.WebApp.MVC/Dockerfile
+    restart: always
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://*:5001
@@ -39,9 +40,14 @@ services:
     build:
       context: ../src
       dockerfile: ./services/NSE.Identity.API/Dockerfile
+    restart: always
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
-      - ASPNETCORE_URLS=http://*:7241
+      - ASPNETCORE_URLS=https://+:7241;http://+5298
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=nerdstore
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/nerdstore-certificate.pfx
+    volumes:
+      - ./certs:/https:ro
     depends_on:
       - rabbitmq
       - sql-server
@@ -52,9 +58,14 @@ services:
     build:
       context: ../src
       dockerfile: ./services/NSE.Cart.API/Dockerfile
+    restart: always
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
-      - ASPNETCORE_URLS=http://*:7136
+      - ASPNETCORE_URLS=https://+:7136;http://+5262
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=nerdstore
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/nerdstore-certificate.pfx
+    volumes:
+      - ./certs:/https:ro
     depends_on:
       - rabbitmq
       - api-identity
@@ -66,9 +77,14 @@ services:
     build:
       context: ../src
       dockerfile: ./services/NSE.Catalog.API/Dockerfile
+    restart: always
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
-      - ASPNETCORE_URLS=http://*:7012
+      - ASPNETCORE_URLS=https://+:7012;http://+5230
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=nerdstore
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/nerdstore-certificate.pfx
+    volumes:
+      - ./certs:/https:ro
     depends_on:
       - rabbitmq
       - sql-server
@@ -79,9 +95,14 @@ services:
     build:
       context: ../src
       dockerfile: ./services/NSE.customers.API/Dockerfile
+    restart: always
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
-      - ASPNETCORE_URLS=http://*:7057
+      - ASPNETCORE_URLS=https://+:7057;http://+5156
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=nerdstore
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/nerdstore-certificate.pfx
+    volumes:
+      - ./certs:/https:ro
     depends_on:
       - rabbitmq
       - api-identity
@@ -93,9 +114,14 @@ services:
     build:
       context: ../src
       dockerfile: ./services/NSE.orders.API/Dockerfile
+    restart: always
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
-      - ASPNETCORE_URLS=http://*:7283
+      - ASPNETCORE_URLS=https://+:7283;http://+5185
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=nerdstore
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/nerdstore-certificate.pfx
+    volumes:
+      - ./certs:/https:ro
     depends_on:
       - rabbitmq
       - api-identity
@@ -107,9 +133,14 @@ services:
     build:
       context: ../src
       dockerfile: ./services/NSE.payment.API/Dockerfile
+    restart: always
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
-      - ASPNETCORE_URLS=http://*:7100
+      - ASPNETCORE_URLS=https://+:7100;http://+5026
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=nerdstore
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/nerdstore-certificate.pfx
+    volumes:
+      - ./certs:/https:ro
     depends_on:
       - rabbitmq
       - api-identity
@@ -122,9 +153,14 @@ services:
     build:
       context: ../src
       dockerfile: ./api gateways/NSE.Bff.Shopping/Dockerfile
+    restart: always
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
-      - ASPNETCORE_URLS=http://*:7213
+      - ASPNETCORE_URLS=https://+:7213;http://+5160
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=nerdstore
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/nerdstore-certificate.pfx
+    volumes:
+      - ./certs:/https:ro
     depends_on:
       - rabbitmq
       - api-identity
@@ -138,6 +174,7 @@ services:
     build:
       context: ./
       dockerfile: ./nginx/Dockerfile
+    restart: always
     ports:
       - "80:80"
       - "443:443"
