--- a/src/api gateways/NSE.Bff.Shopping/appsettings.Production.json
+++ b/src/api gateways/NSE.Bff.Shopping/appsettings.Production.json
@@ -6,15 +6,15 @@
     }
   },
   "AllowedHosts": "*",
-  "CatalogUrl": "http://nerdstore-api-catalog:7012",
-  "CartUrl": "http://nerdstore-api-cart:7136",
-  "OrderUrl": "http://nerdstore-api-order:7283",
-  "PaymentUrl": "http://nerdstore-api-payment:7100",
-  "CustomerUrl": "http://nerdstore-api-customer:7057",
+  "CatalogUrl": "https://nerdstore-api-catalog:7012",
+  "CartUrl": "https://nerdstore-api-cart:7136",
+  "OrderUrl": "https://nerdstore-api-order:7283",
+  "PaymentUrl": "https://nerdstore-api-payment:7100",
+  "CustomerUrl": "https://nerdstore-api-customer:7057",
   "MessageQueueConnectionString": {
     "MessageBus": "host=rabbit-nerdstore:5672;publisherConfirms=true;timeout=30;username=nerdstore;password=nerdstore"
   },
   "AppSettings": {
-    "AuthenticationJwkUrl": "http://nerdstore-api-identity:7241/jwks"
+    "AuthenticationJwkUrl": "https://nerdstore-api-identity:7241/jwks"
   }
 }
