--- a/src/services/NSE.Customers.API/appsettings.Production.json
+++ b/src/services/NSE.Customers.API/appsettings.Production.json
@@ -13,6 +13,6 @@
     "MessageBus": "host=rabbit-nerdstore:5672;publisherConfirms=true;timeout=30;username=nerdstore;password=nerdstore"
   },
   "AppSettings": {
-    "AuthenticationJwkUrl": "http://nerdstore-api-identity:7241/jwks"
+    "AuthenticationJwkUrl": "https://nerdstore-api-identity:7241/jwks"
   }
 }
