--- a/src/services/NSE.Payment.API/appsettings.Production.json
+++ b/src/services/NSE.Payment.API/appsettings.Production.json
@@ -12,7 +12,7 @@
     "MessageBus": "host=rabbit-nerdstore:5672;publisherConfirms=true;timeout=30;username=nerdstore;password=nerdstore"
   },
   "AppSettings": {
-    "AuthenticationJwkUrl": "http://nerdstore-api-identity:7241/jwks"
+    "AuthenticationJwkUrl": "https://nerdstore-api-identity:7241/jwks"
   },
   "PaymentConfiguration": {
     "DefaultApiKey": "ak_ewr4dsWehiwAT",
